fixed Top 30 contributors invisibility

--- a/style.css
+++ b/style.css
@@ -444,3 +444,27 @@ footer {
 .me-auto{
   margin-left: auto !important;
 }
+.animated{
+  margin-top: 40px;
+  position: relative;
+  display: inline-block;
+  color: rgb(61, 139, 213);
+  font-size: 2em;
+  animation: animate 2s ease-in-out infinite;
+  font-family: 'Times New Roman', Times, serif;        
+}
+
+@keyframes animate {
+  0% {
+      transform: translateY(0px);
+  }
+
+  20% {
+      transform: translateY(-20px);
+  }
+
+  40%,
+  100% {
+      transform: translateY(0px);
+  }
+}
